Update main.css Fixed cloud text cutoff
Fixed cloud text cutoff in the rocketship div.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2630,7 +2630,7 @@
 			@media screen and (max-width: 1280px) {
 
 				.wrapper > .inner {
-					width: 90%;
+					width: 80%;
 				}
 
 			}
